Update URL of the app script

--- a/src/templates/layouts/base.html
+++ b/src/templates/layouts/base.html
@@ -16,7 +16,7 @@
     {{ standard_header_includes }}
 
     {% if request.query_dict._preview %}
-    <script id="brix-app" src="https://brix-app.netlify.app/bootstrap.js" async defer data-portal-id="{{ content.portal_id }}" data-page-id="{{ content.id }}"></script>
+    <script id="brix-app" src="https://app.gobrix.io/bootstrap.js" async defer data-portal-id="{{ content.portal_id }}" data-page-id="{{ content.id }}"></script>
     {% endif %}
     <!-- Booya Configuration -->
     <script type="text/javascript">
